Update weekly log

--- a/WeeklyLogs/Log071424_072024.md
+++ b/WeeklyLogs/Log071424_072024.md
@@ -87,7 +87,8 @@ Wave speak and velocities were symmetric in this case due to neglecting or linea
 
 
 ## Issues:
-
+- DFM model still slowing down when getting to December
+	- Wonder if we'll see that computational decrease if starting the run on December 01?
 
 ## Next steps:
 - Let DFM model with wave component finish and see if it simulates compound flooding (can also look at Willapa or Porter location as well)
