--- a/WeeklyLogs/Log071424_072024.md
+++ b/WeeklyLogs/Log071424_072024.md
@@ -93,6 +93,7 @@ Wave speak and velocities were symmetric in this case due to neglecting or linea
 
 ## Next steps:
 - Let DFM model with wave component finish and see if it simulates compound flooding (can also look at Willapa or Porter location as well)
+	- Look at log file to see if iterations is longer when hitting December
 - Add in relevant stations in NOAA_WL_obs.xyn file
 - Continue lit review and making momentum budget
 
