--- a/WeeklyLogs/Log071424_072024.md
+++ b/WeeklyLogs/Log071424_072024.md
@@ -20,7 +20,8 @@
 	- Run time slower after getting to 12-02-2023; taking 4 hours of run time to model ~4 hours)
 	- Initially, model simulated 7 days within 1 day of run time
 	- Update: took 4 hours to model 7 hours (checked at ~07/17/24 2300), but still slow
-	- Update (07/18/24 ~1130): 11 hours elapsed to model ~19 hours 
+	- Update (07/18/24 ~1130): 11 hours elapsed to model ~19 hours
+	- Update (07/18/24 ~21:45): 10 hours elapsed to model 13 hours
 - Ran into nNetElemMaxNode error (=5 but expected 3 or 4)
 	- Issue fixed, new grid had one point with 5 nodes, but Yingzhong removed for new grid 'final_mesh_net_new.nc'
 
