--- a/WeeklyLogs/Log071424_072024.md
+++ b/WeeklyLogs/Log071424_072024.md
@@ -22,6 +22,7 @@
 	- Update: took 4 hours to model 7 hours (checked at ~07/17/24 2300), but still slow
 	- Update (07/18/24 ~1130): 11 hours elapsed to model ~19 hours
 	- Update (07/18/24 ~21:45): 10 hours elapsed to model 13 hours
+	- Tried extending run time and made job failed
 - Ran into nNetElemMaxNode error (=5 but expected 3 or 4)
 	- Issue fixed, new grid had one point with 5 nodes, but Yingzhong removed for new grid 'final_mesh_net_new.nc'
 
