Update weekly log

--- a/WeeklyLogs/Log072124_072724.md
+++ b/WeeklyLogs/Log072124_072724.md
@@ -29,6 +29,7 @@ Figure 2: Storm surge 1 and 2 signals for time period.<br>
 ![Storm surge signals](../Figures/072524meeting/Westport_wl_ss.png)
 
 Figure 3: (a) Recombined waves and observed water level signal, (b) Observed and predicted (tides), (c) Residual for "Observed - combined" and "Observed - predicted".
+![Recombined water level signal](../Figures/072524meeting/Westport_wl_decomposed.png)
 
 ## Issues
 - HYAK keep getting disk quota exceeded error
