Update weekly log

--- a/WeeklyLogs/Log072124_072724.md
+++ b/WeeklyLogs/Log072124_072724.md
@@ -36,4 +36,8 @@ Figure 3: (a) Recombined waves and observed water level signal, (b) Observed and
 
 ## Next steps:
 - Finish running DFM model
-- Separate and write out individual terms in momemtum budget from Van Rijn (2011) and Familkhalili's (2020, 2022) papers with relevant equations/derivations for calculating a peudo-longitudinal water level profile for Chehalis River 
+- Separate and write out individual terms in momentum budget from Van Rijn (2011) and Familkhalili's (2020, 2022) papers with relevant equations/derivations for calculating a peudo-longitudinal water level profile for Chehalis River
+- Look into creating restartfile for DFM
+- Look at water level signals at offshore stations and decompose
+- Compare decomposed water level signals in Westport and offshore stations to other literature to compare frequencies 
+- Look into offset between Higgins Island and Montesano to accurately correct for NAVD88/MSL conversion
