Update weekly log

--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -1,1 +1,35 @@
+# July 28 - August 03, 2024
+
+## Summary:
+1) Run DFM with new grid (again)
+2) Decompose Westport water level
+3) DFM restart file
+
+## To do:
+1) Complete run for DFM with new grid
+2) Decompose Westport water levels and draft up analysis
+3) Research into DFM restart file for model run
+
+## Results
+### 1) DFM model
+- Began run on 
+
+### 2) Decompose Westport water levels
+- https://docs.google.com/document/d/1H_t6GQVyG6VNaXZm33C56PRieUtmSzSBsrdhyDpZ2S4/edit
+- 
+
+### 3) DFM restart file
+- Using output from Job18090231 to test RestartFile configuration (TwinHarbors_test13)
+	- Run only had tides for November 8 - 27
+	- Testing restart from November 20 (1641600)
+	- Files contained in TwinHarbors_test16
+- Received error message when trying to run with FlowFM_merged_map.nc file
+	>> ** ERROR  : The specified restart file is of UGRID format, which is not supported.
+	- Perhaps due to MapFormat = 4 (4: netCDF UGRID), instead of 1: netCDF
+	- Will need to run TwinHarbors_test13 again and turn on Rst file output and set RstInterval 
+
+
 ## Next steps
+- Decompose Westport water levels
+	- Filter out frequency bands from tides
+- Create a rough analytical model (implicit) of Grays Harbor based on Van Rijn (2011)
