--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -12,11 +12,30 @@
 
 ## Results
 ### 1) DFM model
-- Began run on 
+- Job19687905 began run on 07/23/24, and late 07/31/24, model has run up to 12-09-23 09:00:00 (taken 8 days and 7 hours so far)
+	- 267GB so far
+- Modeled output at Montesano still underestimate water levels during storm surge period (Fig. 1)
+- Tokepoint and Westport are relatively well modeled though (Fig. 2, 3)
+	- Truncation in Westport is due to NOAA_WL.xyn coordinate (need to change to offshore coordinate to match up)
+
+![Montesano water levels](../Figures/080124meeting/Job19687905_montesano_wl.png)
+Figure 1: Water level comparison at Montesano.<br>
+
+![Tokepoint water levels](../Figures/080124meeting/Job19687905_tokepoint_wl.png)
+Figure 2: Water level comparison at Tokepoint.<br>
+
+![Westport water levels](../Figures/080124meeting/Job19687905_westport_wl.png)
+Figure 3: Water level comparison at Westport.<br>
 
 ### 2) Decompose Westport water levels
 - https://docs.google.com/document/d/1H_t6GQVyG6VNaXZm33C56PRieUtmSzSBsrdhyDpZ2S4/edit
-- 
+- Tidal frequencies plotted on Storm Surge frequency distribution (+SLPA correction) (Fig. 5)
+
+![NTR Storm Surge](../Figures/080124meeting/Westport_wl_slpa_2hrunningavg.png)
+Figure 4: Non-corrected (blue) and corrected (orange) NTR.<br>
+
+![NTR FFT](../Figures/080124meeting/Westport_wl_fft_tidalfreq.png)
+Figure 5: Frequency distribution for correctd NTR with major harmonic constituent bands.<br>
 
 ### 3) DFM restart file
 - Using output from Job18090231 to test RestartFile configuration (TwinHarbors_test13)
@@ -28,8 +47,12 @@
 	- Perhaps due to MapFormat = 4 (4: netCDF UGRID), instead of 1: netCDF
 	- Will need to run TwinHarbors_test13 again and turn on Rst file output and set RstInterval 
 
+## Issues:
+- Current configuration of DFM still doesn't resolve elevated water levels from storm surge and river discharge
 
 ## Next steps
 - Decompose Westport water levels
 	- Filter out frequency bands from tides
 - Create a rough analytical model (implicit) of Grays Harbor based on Van Rijn (2011)
+- Test restart file configuration on TwinHarbors_test16 to see if output afterwards is any different than original run
+	- If not, then it would have worked
