Update weekly log

--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -34,7 +34,7 @@ Figure 3: Water level comparison at Westport.<br>
 ![NTR Storm Surge](../Figures/080124meeting/Westport_wl_slpa_2hrunningavg.png)
 Figure 4: Non-corrected (blue) and corrected (orange) NTR.<br>
 
-![NTR FFT](../Figures/080124meeting/Westport_wl_fft_tidalfreq.png)
+![NTR FFT](../Figures/080124meeting/Westport_wl_fft_tidalfreq.png)<br>
 Figure 5: Frequency distribution for correctd NTR with major harmonic constituent bands.<br>
 
 ### 3) DFM restart file
