--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -45,7 +45,11 @@ Figure 5: Frequency distribution for correctd NTR with major harmonic constituen
 - Received error message when trying to run with FlowFM_merged_map.nc file
 	>> ** ERROR  : The specified restart file is of UGRID format, which is not supported.
 	- Perhaps due to MapFormat = 4 (4: netCDF UGRID), instead of 1: netCDF
-	- Will need to run TwinHarbors_test13 again and turn on Rst file output and set RstInterval 
+	- Will need to run TwinHarbors_test13 again and turn on Rst file output and set RstInterval
+ - Reran TwinHarbors_test13 (Job19762068) and completed
+	- Merged *_rst.nc files into FlowFM_merged_rst.nc
+ - Running TwinHarbors_test16 with new FlowFM_merged_rst.nc file
+	- RestartDateTime = 20231112
 
 ## Issues:
 - Current configuration of DFM still doesn't resolve elevated water levels from storm surge and river discharge
