--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -47,8 +47,8 @@ Figure 5: Frequency distribution for correctd NTR with major harmonic constituen
 	- Perhaps due to MapFormat = 4 (4: netCDF UGRID), instead of 1: netCDF
 	- Will need to run TwinHarbors_test13 again and turn on Rst file output and set RstInterval
  - Reran TwinHarbors_test13 (Job19762068) and completed
-	- Merged *_rst.nc files into FlowFM_merged_rst.nc
- - Running TwinHarbors_test16 with new FlowFM_merged_rst.nc file
+	- Merged *_rst.nc files into FlowFM_merged_20231112_000000_rst.nc
+ - Running TwinHarbors_test16 with new FlowFM_merged_20231112_000000_rst.nc file
 	- RestartDateTime = 20231112
 
 ## Issues:
