--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -51,6 +51,9 @@ Figure 5: Frequency distribution for correctd NTR with major harmonic constituen
  - Running TwinHarbors_test16 with new FlowFM_merged_20231112_000000_rst.nc file
 	- RestartDateTime = 20231112
 
+ - Restart File instructions:
+	- https://docs.google.com/document/d/1_i41_wRUssK4Dv2hYablegglfzBS7KS6G9qcSir26lw/edit
+
 ## Issues:
 - Current configuration of DFM still doesn't resolve elevated water levels from storm surge and river discharge
 
