--- a/WeeklyLogs/Log072824_080324.md
+++ b/WeeklyLogs/Log072824_080324.md
@@ -63,3 +63,4 @@ Figure 5: Frequency distribution for correctd NTR with major harmonic constituen
 - Create a rough analytical model (implicit) of Grays Harbor based on Van Rijn (2011)
 - Test restart file configuration on TwinHarbors_test16 to see if output afterwards is any different than original run
 	- If not, then it would have worked
+ - Change coordinates in NOAA_WL.xyn file (Westport, Tokepoint, and any other relevant points)
