Update weekly log

--- a/WeeklyLogs/Log080424_081024.md
+++ b/WeeklyLogs/Log080424_081024.md
@@ -10,19 +10,19 @@
 ### 1) DFM RestartFile test
 Ran DFM for November 08-20 to get original output. Then ran RestartFile configurations to test model running from November 08-20. Maximum 1.33mm (Westport), 1.11mm (Montesano), and 1.12mm (Tokepoint) difference in water levels.
 
-![Water level comparisons](../Figures/080724meeting/RestartFile_resid_comparison.png)
+![Water level comparisons](../Figures/080724meeting/RestartFile_resid_comparison.png)<br>
 Figure 1: Water level comparisons between original model run and restart file model run.<br>
 
-![Water level residuals](../Figures/080724meeting/RestartFile_wl_comparison.png)
+![Water level residuals](../Figures/080724meeting/RestartFile_wl_comparison.png)<br>
 Figure 2: Residuals between original model run and restart file model run.<br>
 
 ### 2) Extent of storm surge in Grays Harbor
 - Compared transect (dx=10km) from mouth to 60km upstream and began seeing elevated water levels ~43km upstream (7km downstream of Montesano) (Fig. 3,4)
 
-![Grays Harbor transect](../Figures/080724meeting/GraysHarbor_transect.png)
+![Grays Harbor transect](../Figures/080724meeting/GraysHarbor_transect.png)<br>
 Figure 3: Grays Harbor transect and location of points.<br>
 
-![Grays Harbor water level transect](../Figures/080724meeting/GraysHarbor_wl_transect.png)
+![Grays Harbor water level transect](../Figures/080724meeting/GraysHarbor_wl_transect.png)<br>
 Figure 4: Water levels along Grays Harbor transect.<br>
 
 
@@ -32,12 +32,12 @@ Figure 4: Water levels along Grays Harbor transect.<br>
 - Correcting the predicted tides with SLPA seems to match observed water levels a bit better (Fig. 7). 
 
 
-![Grays Harbor pressure transect](../Figures/080724meeting/GraysHarbor_pressure_transect.png)
+![Grays Harbor pressure transect](../Figures/080724meeting/GraysHarbor_pressure_transect.png)<br>
 Figure 5: Pressure at each Grays Harbor transect points compared with observed SLP at the Westport station.<br>
 
-![Grays Harbor pressure transect](../Figures/080724meeting/GraysHarbor_pressurediff_transect.png)
+![Grays Harbor pressure transect](../Figures/080724meeting/GraysHarbor_pressurediff_transect.png)<br>
 Figure 6: SLP differences between the Westport station and each transect point.<br>
 
 
-![Westport water levels](../Figures/080724meeting/Westport_tidesvstidesslpa.png)
+![Westport water levels](../Figures/080724meeting/Westport_tidesvstidesslpa.png)<br>
 Figure 7: Comparison at Westport tide gauge of 'Predicted' water levels and 'Predicted+SLPA correction'.<br>
