Update weekly log

--- a/WeeklyLogs/Log080424_081024.md
+++ b/WeeklyLogs/Log080424_081024.md
@@ -41,3 +41,10 @@ Figure 6: SLP differences between the Westport station and each transect point.<
 
 ![Westport water levels](../Figures/080724meeting/Westport_tidesvstidesslpa.png)<br>
 Figure 7: Comparison at Westport tide gauge of 'Predicted' water levels and 'Predicted+SLPA correction'.<br>
+
+## Next steps
+- Decompose Westport water levels
+	- Filter out frequency bands from tides
+- Change coordinates in NOAA_WL.xyn file (Westport, Tokepoint, and any other relevant points)
+- Verify -1.131m offset is true for Montesano water level correction (to match MSL)
+- Work on analytical model
