Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -5,3 +5,41 @@
 2) Plot map with wetting/drying threshold
 3) Decompose Westport NTRs
 4) Work on analytical model
+
+## To do:
+1) Run DFM models to get different scenarios (tides, tides+MET, tides+MET+discharge, tides+MET+discharge+waves)
+2) Re-plot DFM output map with thresholds for flooding
+3) Work on analytical model for Grays Harbor
+
+## Results:
+### 1) DFM model runs
+*Model T - tides
+*Model TM - tides and MET (wind, pressure)
+*Model TMD - tides, MET, discharge
+*Model TMDW - tides, MET, discharge, waves
+
+- Ran DFM model with tides (Job19870441) (Fig. 1)
+- Ran DFM model with tides+MET (Job19878243) (Fig. 1)
+- Ran DFM model with tides+MET+discharge (Job19883575) (Fig. 1)
+- Ran DFM model with tides+MET+discharge+waves (Job19687905) (Fig. 1)
+
+![Grays Harbor transect water levels](../Figures/081324meeting/GHtransect_wl_models.png)<br>
+Figure 1: Water levels along Grays Harbor transect for all 4 models.<br>
+
+- Models T and TM had mostly same water levels (<5 cm difference for all transect sites) (Fig. 2)
+- Models TMD and TMDW had mostly same water levels (<9cm) (Fig. 3)
+
+![Transect differences (TM-T)](../Figures/081324meeting/GHtransect_wl_diff_tm-t.png)<br>
+Figure 2: Water level differences between model TM and T.<br>
+
+![Transect differences (TMDW-TMD)](../Figures/081324meeting/GHtransect_wl_diff_tmdw-tmd.png)<br>
+Figure 3: Water level differences between model TMDW and TMD.<br>
+
+
+
+## Issues:
+- 
+
+
+## Next steps:
+- 
