Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -13,10 +13,7 @@
 
 ## Results:
 ### 1) DFM model runs
-*Model T - tides
-*Model TM - tides and MET (wind, pressure)
-*Model TMD - tides, MET, discharge
-*Model TMDW - tides, MET, discharge, waves
+*Model T - tides; Model TM - tides and MET (wind, pressure); Model TMD - tides, MET, discharge; Model TMDW - tides, MET, discharge, waves
 
 - Ran DFM model with tides (Job19870441) (Fig. 1)
 - Ran DFM model with tides+MET (Job19878243) (Fig. 1)
@@ -35,6 +32,11 @@ Figure 2: Water level differences between model TM and T.<br>
 ![Transect differences (TMDW-TMD)](../Figures/081324meeting/GHtransect_wl_diff_tmdw-tmd.png)<br>
 Figure 3: Water level differences between model TMDW and TMD.<br>
 
+### 2) Re-plot flood map
+Re-plot flooding map for Grays Harbor using 0.01m threshold (Fig. 4).<br>
+
+![Flood map](../Figures/081324meeting/DecStormFlood.gif)<br>
+Figure 4: SSH for December flood.<br>
 
 
 ## Issues:
