Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -3,8 +3,7 @@
 ## Summary:
 1) Run DFM model for tides, tides+MET, tides+MET+discharge
 2) Plot map with wetting/drying threshold
-3) Decompose Westport NTRs
-4) Work on analytical model
+3) Work on analytical model
 
 ## To do:
 1) Run DFM models to get different scenarios (tides, tides+MET, tides+MET+discharge, tides+MET+discharge+waves)
@@ -38,10 +37,14 @@ Re-plot flooding map for Grays Harbor using 0.01m threshold (Fig. 4).<br>
 ![Flood map](../Figures/081324meeting/DecStormFlood.gif)<br>
 Figure 4: SSH for December flood.<br>
 
+### 3) Analytical model
+- Fit line to Chehalis River width convergence (Fig. 5).<br>
 
-## Issues:
-- 
+![GH width convergence](../Figures/081324meeting/GH_widthconvergence.png)<br>
+Figure 5: Fitted line for Chehalis River width convergence.<br>
 
 
 ## Next steps:
-- 
+- Figure out how to create restart files from *merged_map.nc files for specific time
+- Continue analytical model
+
