Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -24,6 +24,8 @@ Figure 1: Water levels along Grays Harbor transect for all 4 models.<br>
 
 - Models T and TM had mostly same water levels (<5 cm difference for all transect sites) (Fig. 2)
 - Models TMD and TMDW had mostly same water levels (<9cm) (Fig. 3)
+- Testing the T+M model again, but it seems like discharge may make the largest difference in terms of water level influence during storm events
+
 
 ![Transect differences (TM-T)](../Figures/081324meeting/GHtransect_wl_diff_tm-t.png)<br>
 Figure 2: Water level differences between model TM and T.<br>
@@ -38,13 +40,15 @@ Re-plot flooding map for Grays Harbor using 0.01m threshold (Fig. 4).<br>
 Figure 4: SSH for December flood.<br>
 
 ### 3) Analytical model
-- Fit line to Chehalis River width convergence (Fig. 5).<br>
+- Fit line to Chehalis River width convergence (Fig. 5)<br>
+- Solved initial water level for transect (Fig. 6)<br>
 
 ![GH width convergence](../Figures/081324meeting/GH_widthconvergence.png)<br>
 Figure 5: Fitted line for Chehalis River width convergence.<br>
 
+![GH initial transect](../Figures/081324meeting/GHtransect_eta_t0.png)<br>
+Figure 6: Eta for transect at time=0.<br>
 
 ## Next steps:
 - Figure out how to create restart files from *merged_map.nc files for specific time
 - Continue analytical model
-
