Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -51,4 +51,5 @@ Figure 6: Eta for transect at time=0.<br>
 
 ## Next steps:
 - Figure out how to create restart files from *merged_map.nc files for specific time
+- Figure out how to plot triangular mesh grid on Python efficiently
 - Continue analytical model
