Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -1,23 +1,21 @@
 # August 11 - August 17, 2024
 
 ## Summary:
-1) Run DFM model for tides, tides+MET, tides+MET+discharge
-2) Plot map with wetting/drying threshold
-3) Work on analytical model
+1) Run DFM model for tides, tides+MET, tides+MET+discharge<br>
+2) Plot map with wetting/drying thresholdbr>
+3) Work on analytical modelbr>
 
 ## To do:
-1) Run DFM models to get different scenarios (tides, tides+MET, tides+MET+discharge, tides+MET+discharge+waves)
-2) Re-plot DFM output map with thresholds for flooding
-3) Work on analytical model for Grays Harbor
+1) Run DFM models to get different scenarios (tides, tides+MET, tides+MET+discharge, tides+MET+discharge+waves)br>
+2) Re-plot DFM output map with thresholds for floodingbr>
+3) Work on analytical model for Grays Harborbr>
 
 ## Results:
 ### 1) DFM model runs
-*Model T - tides; Model TM - tides and MET (wind, pressure); Model TMD - tides, MET, discharge; Model TMDW - tides, MET, discharge, waves
-
-- Ran DFM model with tides (Job19870441) (Fig. 1)
-- Ran DFM model with tides+MET (Job19878243) (Fig. 1)
-- Ran DFM model with tides+MET+discharge (Job19883575) (Fig. 1)
-- Ran DFM model with tides+MET+discharge+waves (Job19687905) (Fig. 1)
+- Ran DFM model with tides - Model T(Job19870441) (Fig. 1)
+- Ran DFM model with tides+MET - Model TM (Job19878243) (Fig. 1)
+- Ran DFM model with tides+MET+discharge - Model TMD (Job19883575) (Fig. 1)
+- Ran DFM model with tides+MET+discharge+waves - Model TMDW (Job19687905) (Fig. 1)
 
 ![Grays Harbor transect water levels](../Figures/081324meeting/GHtransect_wl_models.png)<br>
 Figure 1: Water levels along Grays Harbor transect for all 4 models.<br>
