Update weekly log

--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -20,32 +20,36 @@
 ![Grays Harbor transect water levels](../Figures/081324meeting/GHtransect_wl_models.png)<br>
 Figure 1: Water levels along Grays Harbor transect for all 4 models.<br>
 
-- Models T and TM had mostly same water levels (<5 cm difference for all transect sites) (Fig. 2)
-- Models TMD and TMDW had mostly same water levels (<9cm) (Fig. 3)
-- Testing the T+M model again, but it seems like discharge may make the largest difference in terms of water level influence during storm events
+- Relative to the base model run (Model T), Model TM (tides+MET) showed differences of at least 0.5m along the transects, with this value increasing as you move upstream (Fig. 2)
+- Comparing Model TMD and TM, there is little change at the mouth of Grays Harbor (<2cm) up to 20km upstream (Fig. 3)
+	- Moving further upstream, MET begins to play a larger influence adding up to 2 meters near Montesano
+- Comparing Model TMDW and TMD, water levels were mostly the same (<~5cm) with some phase shifts (spikes) (Fig. 4)
 
 
 ![Transect differences (TM-T)](../Figures/081324meeting/GHtransect_wl_diff_tm-t.png)<br>
 Figure 2: Water level differences between model TM and T.<br>
 
+![Transect differences (TMD-TM)](../Figures/081324meeting/GHtransect_wl_diff_tmd-tm.png)<br>
+Figure 3: Water level differences between model TMD and TM.<br>
+
 ![Transect differences (TMDW-TMD)](../Figures/081324meeting/GHtransect_wl_diff_tmdw-tmd.png)<br>
-Figure 3: Water level differences between model TMDW and TMD.<br>
+Figure 4: Water level differences between model TMDW and TMD.<br>
 
 ### 2) Re-plot flood map
-Re-plot flooding map for Grays Harbor using 0.01m threshold (Fig. 4).<br>
+Re-plot flooding map for Grays Harbor using 0.01m threshold (Fig. 5).<br>
 
 ![Flood map](../Figures/081324meeting/DecStormFlood.gif)<br>
-Figure 4: SSH for December flood.<br>
+Figure 5: SSH for December flood.<br>
 
 ### 3) Analytical model
-- Fit line to Chehalis River width convergence (Fig. 5)<br>
-- Solved initial water level for transect (Fig. 6)<br>
+- Fit line to Chehalis River width convergence (Fig. 6)<br>
+- Solved initial water level for transect (Fig. 7)<br>
 
 ![GH width convergence](../Figures/081324meeting/GH_widthconvergence.png)<br>
-Figure 5: Fitted line for Chehalis River width convergence.<br>
+Figure 6: Fitted line for Chehalis River width convergence.<br>
 
 ![GH initial transect](../Figures/081324meeting/GHtransect_eta_t0.png)<br>
-Figure 6: Eta for transect at time=0.<br>
+Figure 7: Eta for transect at time=0.<br>
 
 ## Next steps:
 - Figure out how to create restart files from *merged_map.nc files for specific time
