--- a/WeeklyLogs/Log081124_081724.md
+++ b/WeeklyLogs/Log081124_081724.md
@@ -2,13 +2,13 @@
 
 ## Summary:
 1) Run DFM model for tides, tides+MET, tides+MET+discharge<br>
-2) Plot map with wetting/drying thresholdbr>
-3) Work on analytical modelbr>
+2) Plot map with wetting/drying threshold<br>
+3) Work on analytical model<br>
 
 ## To do:
-1) Run DFM models to get different scenarios (tides, tides+MET, tides+MET+discharge, tides+MET+discharge+waves)br>
-2) Re-plot DFM output map with thresholds for floodingbr>
-3) Work on analytical model for Grays Harborbr>
+1) Run DFM models to get different scenarios (tides, tides+MET, tides+MET+discharge, tides+MET+discharge+waves)<br>
+2) Re-plot DFM output map with thresholds for flooding<br>
+3) Work on analytical model for Grays Harbor<br>
 
 ## Results:
 ### 1) DFM model runs
