Update weekly log

--- a/WeeklyLogs/Log081824_082424.md
+++ b/WeeklyLogs/Log081824_082424.md
@@ -48,6 +48,6 @@ Figure 6: Water levels differences between model v1 and v2 (T).<br>
 - Found January 2022 storm
 - https://docs.google.com/document/d/1wrkGv_q07HguVheaNbDvD7WoNb23vT04uz8LCbbjmKc/edit
 
-## Issues:
-
 ## Next steps:
+- Figure out how to use LANDSAT images with DSWe product
+- Continue analytical model
