--- a/WeeklyLogs/Log081824_082424.md
+++ b/WeeklyLogs/Log081824_082424.md
@@ -44,6 +44,9 @@ Figure 5: Water levels for model v1 and v2 (T).<br>
 ![Transect differences (T)](../Figures/082024meeting/DFMresiduals_t.png)<br>
 Figure 6: Water levels differences between model v1 and v2 (T).<br>
 
+![Grays Harbor Map](../Figures/082024meeting/GH_transect_map.png)<br>
+Figure 7: Grays Harbor transect locations.<br>
+
 ### 2) Investigate storms of interest
 - Found January 2022 storm
 - https://docs.google.com/document/d/1wrkGv_q07HguVheaNbDvD7WoNb23vT04uz8LCbbjmKc/edit
