Update weekly log

--- a/WeeklyLogs/Log082524_083124.md
+++ b/WeeklyLogs/Log082524_083124.md
@@ -32,13 +32,13 @@
 Figure 1: Montesano water levels for December 2021 run.<br>
 
 ![Tokepoint Water Levels](../Figures/082724meeting/Job20017662_tokepoint_wl.png)<br>
-Figure 2: Montesano water levels for December 2021 run.<br>
+Figure 2: Tokepoint water levels for December 2021 run.<br>
 
 ![Westport Water Levels](../Figures/082724meeting/Job20017662_westport_wl.png)<br>
-Figure 3: Montesano water levels for December 2021 run.<br>
+Figure 3: Westport water levels for December 2021 run.<br>
 
 ![Willapa Water Levels](../Figures/082724meeting/Job20017662_willapa_wl.png)<br>
-Figure 4: Montesano water levels for December 2021 run.<br>
+Figure 4: Willapa water levels for December 2021 run.<br>
 
 ### 3) Stats comparing grid v1 and v2
 - Grid v1 still seems to perform better at Montesano (Table 1)
@@ -50,10 +50,10 @@ Table 1: Grid v1 and v2 comparisons for Montesano.<br>
 ![Grid v1 and v2 comparison](../Figures/082724meeting/Modelv1v2_stats_westport.png)<br>
 Table 2: Grid v1 and v2 comparisons for Westport.<br>
 
-![Westport water level comparison](../Figures/082724meeting/Westport_wl_gridcomparison)<br>
+![Westport water level comparison](../Figures/082724meeting/Westport_wl_gridcomparison.png)<br>
 Figure 5: Water level comparisons between v1 and v2 models.<br>
 
-### 4) Rewrote water level plotting scripts
+### 4) Rewrote water level plotting scripts on HYAK
 - Rewrote scripts to pull data via USGS and NOAA API
 
 
@@ -70,7 +70,7 @@ Figure 5: Water level comparisons between v1 and v2 models.<br>
 	- Merge script did not work either
 - Run #4 for Dec/Jan 2022 storm starting from December 25 to see if it will run its entirety
 
-![Slurm output](../Figures/082724meeting/slurm-20061338_screenshot)<br>
+![Slurm output](../Figures/082724meeting/slurm-20061338_screenshot.png)<br>
 Figure 6: Slurm output showing iterations abruptly stopping.<br>
 
 # Next steps:
