Update weekly log

--- a/WeeklyLogs/Log082524_083124.md
+++ b/WeeklyLogs/Log082524_083124.md
@@ -2,10 +2,10 @@
 
 
 ## Summary:
-1) Downloaded data for Dec21/Jan22 storm period
-2) Ran DFM model for tides for December 2021 - Jan 2022 storm (4 runs, all tides)
-3) Stat comparisons for v1 and v2 grids
-4) Rewrote water level plotting scripts on HYAK
+1) Downloaded data for Dec21/Jan22 storm period<.br>
+2) Ran DFM model for tides for December 2021 - Jan 2022 storm (4 runs, all tides)<.br>
+3) Stat comparisons for v1 and v2 grids<.br>
+4) Rewrote water level plotting scripts on HYAK<.br>
 
 
 
