Update weekly log

--- a/WeeklyLogs/Log090124_090724.md
+++ b/WeeklyLogs/Log090124_090724.md
@@ -33,7 +33,7 @@ Figure 3: Time series of model with tides, MET, and discharge (v1, v1 (waves), v
 
 
 ## Issues:
-- Grid v3 is not doing as well as the other versions
+- Grid v3 does not perform as well as v1 or v2
 
 
 ## Next steps:
