Update weekly log

--- a/WeeklyLogs/Log090824_091424.md
+++ b/WeeklyLogs/Log090824_091424.md
@@ -36,9 +36,9 @@ Figure 2: Residuals between grids and USGS/NOAA observed data.<br>
 
 
 ### 2) Inundation maps
-- Inundation gif is for model run with tides only (v3 grid) (Video 1)
+- Model TMD (v4 grid) inundation map (Video 1)
 
-![Inundation map](../Figures/091024meeting/Job20365503_Tv3_ssh.gif)<br>
+![Inundation map](../Figures/091024meeting/Job20676065_v4.gif)<br>
 Video 1: Inundation map with Montesano water levels and Porter discharge rates.<br>
 
 
