Update weekly log

--- a/WeeklyLogs/Log091524_092124.md
+++ b/WeeklyLogs/Log091524_092124.md
@@ -25,6 +25,10 @@
 		- However, it did not exceed peak water levels like v4 did
 	- v5.5 and v5.5.1 followed each other closely, with slightly more elevated water levels than v5.1 and v5.4, but still fail to simulate elevated water levels during storm period
 
+![Time series](../Figures/091724meeting/WaterLevelComparisons_v2v4v5.1v5.2v5.4v5.5v5.5.1.png)<br>
+Figure 1: Water level comparisons between grid versions.<br>
+
+
 <b>Chehalis River transect</b>
 - Created transect from Grays Harbor mouth to upstream of Montesano (10km increments) and plotted interpolated water levels throughout time series (Figs. 2-7).
 - We see the elevated water level distribution fluctuate, but steadily increase throughout the end of the time series due to increasing discharge/runoff upstream (Porter) for all grid versions
