Update weekly log

--- a/WeeklyLogs/Log091524_092124.md
+++ b/WeeklyLogs/Log091524_092124.md
@@ -8,8 +8,8 @@
 2) Look at water level transect
 
 ## Results:
-1) DFM model runs (v5)
-<b>Station water levels</b>
+1) DFM model runs (v5)<br>
+<u><b>Station water levels</b></u>
 - Westport (Fig. 1a):
 	- All model versions underestimated water levels at Westport, but were consistent (may be function of being offshore of NOAA station coordinate)
 - Tokepoint (Fig. 1b):
