Update weekly log

--- a/WeeklyLogs/Log091524_092124.md
+++ b/WeeklyLogs/Log091524_092124.md
@@ -8,8 +8,7 @@
 2) Look at water level transect
 
 ## Results:
-1) DFM model runs (v5)<br>
-<u><b>Station water levels</b></u>
+### Water Level Comparisons
 - Westport (Fig. 1a):
 	- All model versions underestimated water levels at Westport, but were consistent (may be function of being offshore of NOAA station coordinate)
 - Tokepoint (Fig. 1b):
@@ -29,7 +28,7 @@
 Figure 1: Water level comparisons between grid versions.<br>
 
 
-<b>Chehalis River transect</b>
+### Chehalis River transect
 - Created transect from Grays Harbor mouth to upstream of Montesano (10km increments) and plotted interpolated water levels throughout time series (Figs. 2-7).
 - We see the elevated water level distribution fluctuate, but steadily increase throughout the end of the time series due to increasing discharge/runoff upstream (Porter) for all grid versions
 - v2 resembles the elevated water levels at Montesano, so I am using this as a reference for other grid versions (Fig. 2)
