Update weekly log

--- a/WeeklyLogs/Log091524_092124.md
+++ b/WeeklyLogs/Log091524_092124.md
@@ -63,11 +63,14 @@ Figure 6: Model TMD (v5.4) transect plot.<br>
 ![Transect plot](../Figures/091724meeting/Model_TMDv5.5.1_transect.png)<br>
 Figure 7: Model TMD (v5.5.1) transect plot.<br>
 
+
 ## Issues:
 - Upstream points may be flooded, not representative of thalweg (need to figure out consistent way to trace)
 
+
 ## Next steps:
-- 
+- Calculate other metrics (i.e. BTPG, cross-channel avg. velocity, transition point) for DFM model
+- Work on way to trace thalweg of channel (or have a set of consistent coordinates for channel)
 
 
 
