Update weekly log

--- a/WeeklyLogs/Log091524_092124.md
+++ b/WeeklyLogs/Log091524_092124.md
@@ -71,6 +71,7 @@ Figure 7: Model TMD (v5.5.1) transect plot.<br>
 ## Next steps:
 - Calculate other metrics (i.e. BTPG, cross-channel avg. velocity, transition point) for DFM model
 - Work on way to trace thalweg of channel (or have a set of consistent coordinates for channel)
-
+- Run new grid version? 
+	- Best results are with v2 (15m to 10m) and v5.2 (10m to 2m w/shift transition)
 
 
