Update weekly log

--- a/WeeklyLogs/Log091524_092124.md
+++ b/WeeklyLogs/Log091524_092124.md
@@ -34,16 +34,19 @@ Figure 1: Water level comparisons between grid versions.<br>
 - v2 resembles the elevated water levels at Montesano, so I am using this as a reference for other grid versions (Fig. 2)
 	- Tidal signals control the range of along-channel water levels (negative during lower low tides, and positive during the rest of the tides)
 	- When the storm arrives, elevated water levels extend downstream, showing higher water levels distributed throughout the slough 
+	- Still slight tidal signal upstream of Montesano (which is expected)
 
 ![Transect plot](../Figures/091724meeting/Model_TMDv2_transect.png)<br>
 Figure 2: Model TMD (v2) transect plot.<br>
 
 - v3 shows a similar trend (but smoother), but elevated water level distribution doesn't extend as far downstream as v2 (Fig. 3)
+- Tidal signal upstream ofMontesano is removed though
 
 ![Transect plot](../Figures/091724meeting/Model_TMDv3_transect.png)<br>
 Figure 3: Model TMD (v3) transect plot.<br>
 
 - v4 shows a very similar pattern as v3, but elevated water level distributions extend further downstream than v3 (Fig. 4)
+- Tidal signal upstream ofMontesano is removed though
 
 ![Transect plot](../Figures/091724meeting/Model_TMDv4_transect.png)<br>
 Figure 4: Model TMD (v4) transect plot.<br>
