Update weekly log

--- a/WeeklyLogs/Log092224_092824.md
+++ b/WeeklyLogs/Log092224_092824.md
@@ -25,8 +25,8 @@ Figure 2: Water level comparisons for grid v2 (TMD) for January 2022 storm inclu
 - Looked back and realized the December 2023 storms v1, v2, v3, and v4 runs had fixed weir
 	- Found by rerunning v2 and seeing output was not reproducible, but worked well after adding back in the fixed weir (Fig. 3, 4)
 - Added fixed weir to Jan 2022 storm and it seems to make Montesano water levels more accurate
-- Older GIF created had fixed weir (Job19936754_v2)
-	- Created new GIF of v2 grid WITHOUT fixed weir and does not show as much flooding near Montesano (Fig. 
+- Older GIF created had fixed weir (Job19936754_v2) (Fig. 5)
+	- Created new GIF of v2 grid WITHOUT fixed weir and does not show as much flooding near Montesano (Fig. 6)
 	- Chehalis River Surge Plain drains completely during tidal cycles, unlike previous GIF (v2)
 
 ![Job20964694](../Figures/092424meeting/Job20964694_TMDv2_montesano_wl.png)<br>
